<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Angad Cheema.
  ~  * Github: @angad305
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 30/3/20 2:39 PM
  ~  */
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/details_background">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
      android:id="@+id/details_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="8dp"
      android:fontFamily="@font/roboto_medium"
      android:text="@string/movie_title"
      android:textAlignment="center"
      android:textColor="@color/text_color"
      android:textSize="30sp"/>

    <ToggleButton
      android:id="@+id/button_favorite"
      android:layout_width="36dp"
      android:layout_height="36dp"
      android:layout_margin="6dp"
      android:layout_gravity="center"
      android:background="@drawable/button_favorite"
      android:checked="false"
      android:text=""
      android:textOff=""
      android:textOn=""
      />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="6dp"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/details_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher_background"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/release_date"/>

          <TextView
            android:id="@+id/details_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/example_date"
            android:textColor="@color/text_color"/>
        </LinearLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/user_rating"/>

          <TextView
            android:id="@+id/details_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/example_rating"
            android:textColor="@color/text_color"/>

        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/id"/>

          <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/example_id"
            android:textColor="@color/text_color"/>
        </LinearLayout>

      </LinearLayout>


    </LinearLayout>


    <TextView
      android:id="@+id/details_overview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="6dp"
      android:background="@color/details_background"
      android:fontFamily="@font/open_sans_light_italic"
      android:text="@string/sypnosis_example"
      android:textColor="@android:color/black"
      android:textSize="18sp"/>


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/trailers"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"/>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
          android:id="@+id/trailer1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="center"
          android:background="@color/trailer_button_background"
          android:onClick="trailer1"
          android:text="@string/trailer_1"
          android:textColor="@color/trailer_color"/>
        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_gravity="center"
          android:background="@color/trailer_button_background"
          android:backgroundTint="@color/colorPrimaryDark"
          android:onClick="trailer2"
          android:text="@string/trailer_2"
          android:textColor="@color/trailer_color"/>
      </LinearLayout>


    </LinearLayout>


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="4dp"
      android:orientation="vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/reviews"
        android:textColor="@color/review_text"
        android:textSize="22sp"/>

      <TextView
        android:id="@+id/reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/no_review_available"
        android:textSize="14sp"/>


    </LinearLayout>


  </LinearLayout>
</ScrollView>